Fix .btn fallback borders in IE7, and wrap demo buttons in a form to avoid IE7 border-bug

--- a/css/patterns.css
+++ b/css/patterns.css
@@ -21,9 +21,9 @@
 .btn {
     display: inline-block;
     padding: 5px 14px 6px;
-    border: 1px solid #ccc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom-color: rgba(0, 0, 0, 0.25);
+    border: 1px solid;
+    border-color: #ccc #ccc #bbb;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     margin: 0;
     font-size: 13px;
     line-height: normal;
@@ -56,9 +56,9 @@
 
 .btn:hover,
 .btn:focus {
-    border: 1px solid #aaa;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom-color: rgba(0, 0, 0, 0.25);
+    border: 1px solid;
+    border-color: #bbb #bbb #aaa;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     color: #333;
     background-position: 0 -15px;
     text-decoration: none;
@@ -445,16 +445,16 @@
    ========================================================================== */
 
 .alert-message {
+    background-color: #e6e6e6;
     background-color: rgba(0, 0, 0, 0.15);
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='rgba(0, 0, 0, 0.15)', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#15000000');
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(rgba(0, 0, 0, 0.15)));
     background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
     background-image: -moz-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
     background-image: -ms-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
     background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.15));
     background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.15));
-    background-color: #e6e6e6;
     margin-bottom: 18px;
     padding: 8px 15px;
     color: #fff;
